# agent_ocr

./: .gitignore  README.md  pyproject.toml
docs/: README_KO.md
skills/: eyes.md
src/eyes/: __init__.py  __main__.py  cli.py  config.py  pipeline.py
src/eyes/formatter/: __init__.py  markdown.py
src/eyes/layer1/: __init__.py  color.py  meta.py
src/eyes/layer2/: __init__.py  florence_caption.py  synthesizer.py  yolo_detect.py
src/eyes/layer3/: __init__.py  vlm.py
src/eyes/platform/: __init__.py  base.py  darwin.py  factory.py  fallback.py  linux.py  windows.py
